--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="birthday-text">🎉 Happy Birthday! 🎂</h1>
-        <p class="message">Hey KUSALI, you are more than a friend; you are my greatest treasure. Words can't express the love I hold in my heart for you...</p>
+        <p class="message">Hey My KUSALI, you are more than a friend; you are my greatest treasure. Words can't express the love I hold in my heart for you...</p>
         <button id="openBtn">Click to Open 🎨</button>
     </div>
     <canvas id="fireworksCanvas"></canvas>
