--- a/index.html
+++ b/index.html
@@ -22,30 +22,19 @@
         <div class="balloon" style="--color: #ff6347; --delay: 4s;"></div>
     </div>
     
-    <!-- Cake positioned outside the card -->
-    <div class="cake-container">
-        <div class="cake">
-            <div class="cake-bottom"></div>
-            <div class="cake-middle"></div>
-            <div class="cake-top"></div>
-            <div class="candles">
-                <div class="candle candle-left">
-                    <div class="flame"></div>
-                </div>
-                <div class="candle candle-center">
-                    <div class="flame"></div>
-                </div>
-                <div class="candle candle-right">
-                    <div class="flame"></div>
-                </div>
-            </div>
+    <!-- Gift box animation as alternative to cake -->
+    <div class="gift-box-container">
+        <div class="gift-box">
+            <div class="gift-lid"></div>
+            <div class="gift-container"></div>
+            <div class="gift-ribbon-vertical"></div>
+            <div class="gift-ribbon-horizontal"></div>
         </div>
     </div>
     
     <div class="container">
         <div class="card">
             <h1 class="birthday-text">
-                <span class="birthday-emoji">🎂</span>
                 HAPPY BIRTHDAY KUSALI!
                 <span class="birthday-emoji">🎉</span>
             </h1>
