--- a/index.html
+++ b/index.html
@@ -3,102 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Kusali! 🎉</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <title>🎁 Special Surprise</title>
+    <style>
+        body {
+            background: #121212;
+            color: #fff;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
+        }
+        .unlock-container {
+            max-width: 400px;
+            padding: 30px;
+            background: rgba(255, 145, 199, 0.1);
+            border-radius: 20px;
+            box-shadow: 0 0 20px rgba(255, 145, 199, 0.2);
+        }
+        input {
+            width: 100%;
+            padding: 15px;
+            margin: 20px 0;
+            border: none;
+            border-radius: 10px;
+            background: #2a2a2a;
+            color: #fff;
+            font-size: 1.1em;
+            text-align: center;
+        }
+        button {
+            background: linear-gradient(45deg, #ff91c7, #b784fd);
+            border: none;
+            padding: 15px 30px;
+            border-radius: 25px;
+            color: white;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+        button:hover {
+            transform: translateY(-3px);
+        }
+        .error {
+            color: #ff6b6b;
+            margin-top: 10px;
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <div id="particles-js"></div>
-
-    <!-- Single Page Card Layout -->
-    <div class="main-container">
-        <div class="birthday-card">
-            <!-- Birthday Text and Message -->
-            <section class="card-header">
-                <h1 class="birthday-text">
-                    Happy Birthday
-                    <span class="name">Kusali!</span>
-                    <span class="birthday-emoji">🎉</span>
-                </h1>
-                
-                <div class="gift-box-container">
-                    <div class="gift-box">
-                        <div class="gift-lid"></div>
-                        <div class="gift-container"></div>
-                        <div class="gift-ribbon-vertical"></div>
-                        <div class="gift-ribbon-horizontal"></div>
-                    </div>
-                </div>
-
-                <div class="message-section">
-                    <p class="message">Dear Kusali, on your special day, I celebrate you and all the joy you bring! May your day be filled with happiness and love! 💖</p>
-                </div>
-            </section>
-
-            <!-- Interactive Buttons -->
-            <section class="button-section">
-                <button id="openBtn" class="btn primary-btn">
-                    <span class="btn-icon">🎁</span>
-                    <span class="btn-text">Special Surprise</span>
-                </button>
-                <button id="memoryBtn" class="btn secondary-btn">
-                    <span class="btn-icon">📸</span>
-                    <span class="btn-text">Our Memories</span>
-                </button>
-            </section>
-
-            <!-- Memory Gallery -->
-            <section class="gallery-section">
-                <div id="gallery" class="gallery">
-                    <div class="gallery-item">
-                        <img src="memory1.jpg" alt="Special Memory 1" loading="lazy">
-                        <div class="gallery-caption">Our First Memory</div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="memory2.jpg" alt="Special Memory 2" loading="lazy">
-                        <div class="gallery-caption">Happy Times</div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="memory3.jpg" alt="Special Memory 3" loading="lazy">
-                        <div class="gallery-caption">Beautiful Moments</div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="memory4.jpg" alt="Special Memory 4" loading="lazy">
-                        <div class="gallery-caption">Unforgettable Day</div>
-                    </div>
-                </div>
-            </section>
-        </div>
+    <div class="unlock-container">
+        <h1>🎀 Almost There! 🎀</h1>
+        <p>Enter your special code to unlock your surprise:</p>
+        <input type="text" id="codeInput" placeholder="Enter your code...">
+        <button onclick="checkCode()">Unlock My Surprise 🎁</button>
+        <p id="error" class="error">Oops! That's not the right code.</p>
     </div>
 
-    <!-- Special Surprise Modal -->
-    <div id="specialModal" class="modal">
-        <div class="modal-content">
-            <button class="close-modal">&times;</button>
-            <div class="surprise-content">
-                <h2 class="surprise-title">✨ My Special Wish For You ✨</h2>
-                <div class="surprise-image-container">
-                    <img src="special.jpg" alt="Special Birthday Moment" class="surprise-image">
-                </div>
-                <div class="surprise-message">
-                    <p class="surprise-text">Dearest Kusali,</p>
-                    <p>On this wonderful day, I want to celebrate the amazing person you are. Your kindness, your smile, and your friendship make the world a better place.</p>
-                    <p>May this year bring you endless joy, success, and countless beautiful moments!</p>
-                    <p class="surprise-signature">With love and warmest wishes ❤️</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Music Control (Hidden but functional) -->
-    <div class="music-controls" id="musicToggle">
-        <span class="music-icon">🎵</span>
-    </div>
-    <audio id="bgMusic" src="birthday_song.mp3" loop></audio>
-
-    <script src="script.js"></script>
+    <script>
+        function checkCode() {
+            const input = document.getElementById('codeInput').value;
+            const error = document.getElementById('error');
+            
+            if(input.toUpperCase() === 'KUSALI2025') {
+                window.location.href = 'birthday.html';
+            } else {
+                error.style.display = 'block';
+                setTimeout(() => {
+                    error.style.display = 'none';
+                }, 3000);
+            }
+        }
+    </script>
 </body>
 </html>
