--- a/birthday.html
+++ b/birthday.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="message-section">
-                    <p class="message">Dear Kusali, on your special day, I celebrate you and all the joy you bring! May your day be filled with happiness and love! 💖</p>
+                    <p class="message">Dear Kusali, wishing you the happiest of birthdays filled with joy, laughter, and endless beautiful moments! May your day be as special as you are 💖</p>
                 </div>
             </section>
 
@@ -87,7 +87,7 @@
                     <p class="surprise-text">Dearest Kusali,</p>
                     <p>On this wonderful day, I want to celebrate the amazing person you are. Your kindness, your smile, and your friendship make the world a better place.</p>
                     <p>May this year bring you endless joy, success, and countless beautiful moments!</p>
-                    <p class="surprise-signature">With love and warmest wishes ❤️</p>
+                    <p class="surprise-signature">With love and warmest wishes from <b>bad</b> LAHIRU 🩵</p>
                 </div>
             </div>
         </div>
