--- a/birthday.html
+++ b/birthday.html
@@ -48,6 +48,10 @@
                     <span class="btn-icon">📸</span>
                     <span class="btn-text">Our Memories</span>
                 </button>
+                <button id="giftBtn" class="btn tertiary-btn">
+                    <span class="btn-icon">🍫</span>
+                    <span class="btn-text">Select Your Gift</span>
+                </button>
             </section>
 
             <!-- Memory Gallery -->
