--- a/select_gift.html
+++ b/select_gift.html
@@ -32,10 +32,11 @@
             background: #ff91c7;
             border-radius: 10px;
             cursor: pointer;
-            transition: transform 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
         .gift-box:hover {
             transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(255, 145, 199, 0.6);
         }
         .gift-box img {
             width: 100%;
@@ -45,38 +46,73 @@
         }
         .gift-box.selected img {
             display: block;
+            animation: revealGift 0.8s ease-in-out forwards;
         }
-        .gift-box.selected .gift-lid,
-        .gift-box.selected .gift-container,
-        .gift-box.selected .gift-ribbon-vertical,
-        .gift-box.selected .gift-ribbon-horizontal {
+        .gift-name {
             display: none;
+            margin-top: 10px;
+            font-size: 1.2em;
+            font-family: 'Dancing Script', cursive;
+            color: #ff91c7;
+            animation: fadeInUp 0.8s ease-in-out forwards;
+        }
+        .gift-box.selected + .gift-name {
+            display: block;
+        }
+        @keyframes revealGift {
+            from {
+                transform: rotateY(90deg);
+                opacity: 0;
+            }
+            to {
+                transform: rotateY(0);
+                opacity: 1;
+            }
+        }
+        @keyframes fadeInUp {
+            from {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
     <h1>🎁 Select Your Gift 🎁</h1>
     <div class="gift-selection">
-        <div class="gift-box" onclick="revealGift(this, 'chocolate1.jpg')">
-            <div class="gift-lid"></div>
-            <div class="gift-container"></div>
-            <div class="gift-ribbon-vertical"></div>
-            <div class="gift-ribbon-horizontal"></div>
-            <img src="chocolate1.jpg" alt="Chocolate 1">
+        <div class="gift-container">
+            <div class="gift-box" onclick="revealGift(this, 'chocolate.jpg')">
+                <div class="gift-lid"></div>
+                <div class="gift-container"></div>
+                <div class="gift-ribbon-vertical"></div>
+                <div class="gift-ribbon-horizontal"></div>
+                <img src="chocolate.jpg" alt="Chocolate 1">
+            </div>
+            <div class="gift-name">Delicious Chocolate</div>
         </div>
-        <div class="gift-box" onclick="revealGift(this, 'chocolate2.jpg')">
-            <div class="gift-lid"></div>
-            <div class="gift-container"></div>
-            <div class="gift-ribbon-vertical"></div>
-            <div class="gift-ribbon-horizontal"></div>
-            <img src="chocolate2.jpg" alt="Chocolate 2">
+        <div class="gift-container">
+            <div class="gift-box" onclick="revealGift(this, 'chocolate.jpg')">
+                <div class="gift-lid"></div>
+                <div class="gift-container"></div>
+                <div class="gift-ribbon-vertical"></div>
+                <div class="gift-ribbon-horizontal"></div>
+                <img src="chocolate.jpg" alt="Chocolate 2">
+            </div>
+            <div class="gift-name">Yummy Chocolate</div>
         </div>
-        <div class="gift-box" onclick="revealGift(this, 'chocolate3.jpg')">
-            <div class="gift-lid"></div>
-            <div class="gift-container"></div>
-            <div class="gift-ribbon-vertical"></div>
-            <div class="gift-ribbon-horizontal"></div>
-            <img src="chocolate3.jpg" alt="Chocolate 3">
+        <div class="gift-container">
+            <div class="gift-box" onclick="revealGift(this, 'chocolate.jpg')">
+                <div class="gift-lid"></div>
+                <div class="gift-container"></div>
+                <div class="gift-ribbon-vertical"></div>
+                <div class="gift-ribbon-horizontal"></div>
+                <img src="chocolate.jpg" alt="Chocolate 3">
+            </div>
+            <div class="gift-name">Tasty Chocolate</div>
         </div>
     </div>
     <script>
@@ -96,6 +132,17 @@
             setTimeout(() => {
                 window.location.href = 'birthday.html';
             }, 3000); // 3 seconds delay
+        }
+
+        // Keep the background music playing
+        window.onload = function() {
+            const bgMusicTime = localStorage.getItem('bgMusicTime');
+            if (bgMusicTime) {
+                const audio = new Audio('birthday_song.mp3');
+                audio.currentTime = bgMusicTime;
+                audio.loop = true;
+                audio.play();
+            }
         }
     </script>
 </body>
