--- a/select_gift.html
+++ b/select_gift.html
@@ -28,8 +28,8 @@
         }
         .gift-box {
             position: relative;
-            width: 200px;
-            height: 200px;
+            width: 300px; /* Increased width */
+            height: 300px; /* Increased height */
             background: #ff91c7;
             border-radius: 10px;
             cursor: pointer;
@@ -82,8 +82,8 @@
         }
         @media (max-width: 768px) {
             .gift-box {
-                width: 150px;
-                height: 150px;
+                width: 200px; /* Adjusted for smaller screens */
+                height: 200px; /* Adjusted for smaller screens */
             }
             .gift-name {
                 font-size: 1.2em;
@@ -91,8 +91,8 @@
         }
         @media (max-width: 480px) {
             .gift-box {
-                width: 120px;
-                height: 120px;
+                width: 150px; /* Adjusted for smallest screens */
+                height: 150px; /* Adjusted for smallest screens */
             }
             .gift-name {
                 font-size: 1em;
