--- a/birthday.html
+++ b/birthday.html
@@ -65,7 +65,7 @@
                     <p class="surprise-text">To my dearest and favorite friend Kusali,</p>
                     <p>Wishing you a birthday as beautiful and special as you are! Your kindness and smile make every moment brighter, and I’m truly grateful to know you.</p>
                     <p>May this year bring you endless joy and unforgettable moments! 💖✨</p>
-                    <p class="surprise-signature">With all my love, <b>bad</b> LAHIRU 🩵</p>
+                    <p class="surprise-signature">With all my love, 😈 <b>bad</b> LAHIRU 🩵</p>
                 </div>
             </div>
         </div>
