--- a/select_gift.html
+++ b/select_gift.html
@@ -110,12 +110,12 @@
     <h1>🎁 Select Your Gift 🎁</h1>
     <div class="gift-selection">
         <div class="gift-container">
-            <div class="gift-box" onclick="revealGift(this, 'chocolate1.jpg')">
+            <div class="gift-box" onclick="revealGift(this, 'chocolate.jpg')">
                 <div class="gift-lid"></div>
                 <div class="gift-container"></div>
                 <div class="gift-ribbon-vertical"></div>
                 <div class="gift-ribbon-horizontal"></div>
-                <img src="chocolate.jpg" alt="Chocolate 1">
+                <img src="chocolate.jpg" alt="Chocolate ">
             </div>
             <div class="gift-name">Delicious Chocolate</div>
         </div>
@@ -125,7 +125,7 @@
                 <div class="gift-container"></div>
                 <div class="gift-ribbon-vertical"></div>
                 <div class="gift-ribbon-horizontal"></div>
-                <img src="chocolate.jpg" alt="Chocolate 2">
+                <img src="chocolate.jpg" alt="Chocolate">
             </div>
             <div class="gift-name">Yummy Chocolate</div>
         </div>
