--- a/birthday.html
+++ b/birthday.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="message-section">
-                    <p class="message">Dear Kusali, may your birthday sparkle with moments of love, joy, and laughter. You deserve all the happiness in the world! 💖😘</p>
+                    <p class="message">Dear Kusali, may your birthday sparkle with moments of love, joy, and laughter. You deserve all the happiness in the world! 💖</p>
                 </div>
             </section>
 
@@ -42,7 +42,7 @@
             <section class="button-section">
                 <button id="openBtn" class="btn primary-btn">
                     <span class="btn-icon">🎁</span>
-                    <span class="btn-text">Special Message</span>
+                    <span class="btn-text">Special Surprise</span>
                 </button>
                 <button id="giftBtn" class="btn tertiary-btn">
                     <span class="btn-icon">🍫</span>
@@ -62,10 +62,10 @@
                     <img src="special.jpg" alt="Special Birthday Moment" class="surprise-image">
                 </div>
                 <div class="surprise-message">
-                    <p class="surprise-text">To my dearest and favorite friend Kusali,</p>
-                    <p>Wishing you a birthday as beautiful and special as you are! Your kindness and smile make every moment brighter, and I’m truly grateful to know you.</p>
-                    <p>May this year bring you endless joy and unforgettable moments! 💖✨</p>
-                    <p class="surprise-signature">With all my love, 😈 <b>bad</b> LAHIRU 🩵</p>
+                    <p class="surprise-text">Dearest Kusali,</p>
+                    <p>On this special day, I am grateful for your presence in my life. Your kindness and smile light up every moment.</p>
+                    <p>May your year be filled with endless joy, love, and beautiful memories!</p>
+                    <p class="surprise-signature">With all my love, <b>bad</b> LAHIRU 🩵</p>
                 </div>
             </div>
         </div>
