--- a/birthday.html
+++ b/birthday.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="surprise-message">
                     <p class="surprise-text">Dearest Kusali,</p>
-                    <p>On this special day, I am grateful for your presence in my life. Your kindness and smile light up every moment.</p>
+                    <p>On this special day, I am grateful to know you in my life. Your kindness and smile light up every moment.</p>
                     <p>May your year be filled with endless joy, love, and beautiful memories!</p>
                     <p class="surprise-signature">With all my love, <b>bad</b> LAHIRU 🩵</p>
                 </div>
