--- a/birthday.html
+++ b/birthday.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="message-section">
-                    <p class="message">Dear Kusali, may your birthday sparkle with moments of love, joy, and laughter. You deserve all the happiness in the world! 💖</p>
+                    <p class="message">Dear Kusali, may your birthday sparkle with moments of love, joy, and laughter. You deserve all the happiness in the world! 💖😘</p>
                 </div>
             </section>
 
@@ -62,10 +62,10 @@
                     <img src="special.jpg" alt="Special Birthday Moment" class="surprise-image">
                 </div>
                 <div class="surprise-message">
-                    <p class="surprise-text">Dearest Kusali,</p>
+                    <p class="surprise-text">To my dearest and favorite frined Kusali,</p>
                     <p>On this special day, I am grateful to know you in my life. Your kindness and smile light up every moment.</p>
                     <p>May your year be filled with endless joy, love, and beautiful memories!</p>
-                    <p class="surprise-signature">With all my love, <b>bad</b> LAHIRU 🩵</p>
+                    <p class="surprise-signature">With all my love, 😈 <b>bad</b> LAHIRU 🩵</p>
                 </div>
             </div>
         </div>
