--- a/birthday.html
+++ b/birthday.html
@@ -62,7 +62,7 @@
                     <img src="special.jpg" alt="Special Birthday Moment" class="surprise-image">
                 </div>
                 <div class="surprise-message">
-                    <p class="surprise-text">To my dearest and favorite frined Kusali,</p>
+                    <p class="surprise-text">To my Dearest and Favorite friend Kusali,</p>
                     <p>On this special day, I am grateful to know you in my life. Your kindness and smile light up every moment.</p>
                     <p>May your year be filled with endless joy, love, and beautiful memories!</p>
                     <p class="surprise-signature">With all my love, 😈 <b>bad</b> LAHIRU 🩵</p>
